[gd_scene load_steps=3 format=2]

[ext_resource path="res://Config.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 198, 176 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 508.0
margin_top = 8.0
margin_right = 712.0
margin_bottom = 73.0
text = "Atras"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load_Config" type="Button" parent="."]
margin_left = 79.0
margin_top = 417.0
margin_right = 220.0
margin_bottom = 463.0
theme = SubResource( 1 )
text = "Cargar Configuracion"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="."]
margin_left = 75.0
margin_top = 481.0
margin_right = 216.0
margin_bottom = 527.0
theme = SubResource( 1 )
text = "Resetear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="GridContainer" parent="."]
anchor_right = 0.5
margin_left = 53.0
margin_top = 128.0
margin_right = 10.0
margin_bottom = 308.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_top = 5.0
margin_right = 107.0
margin_bottom = 19.0
text = "SSID"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer2"]
margin_left = 111.0
margin_right = 317.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer2"]
margin_top = 33.0
margin_right = 107.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 582, 49 )
text = "Contrase√±a Wifi"

[node name="LineEdit2" type="LineEdit" parent="VBoxContainer2"]
margin_left = 111.0
margin_top = 28.0
margin_right = 317.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 507, 54 )
size_flags_horizontal = 3
secret = true

[node name="Label3" type="Label" parent="VBoxContainer2"]
margin_top = 61.0
margin_right = 107.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( 582, 49 )
text = "URL MQTT"

[node name="LineEdit3" type="LineEdit" parent="VBoxContainer2"]
margin_left = 111.0
margin_top = 56.0
margin_right = 317.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 507, 54 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="VBoxContainer2"]
margin_top = 97.0
margin_right = 107.0
margin_bottom = 111.0
rect_pivot_offset = Vector2( 582, 49 )
text = "Device Provision"

[node name="CheckButton" type="CheckButton" parent="VBoxContainer2"]
margin_left = 111.0
margin_top = 84.0
margin_right = 317.0
margin_bottom = 124.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="VBoxContainer2"]
margin_top = 133.0
margin_right = 107.0
margin_bottom = 147.0
rect_pivot_offset = Vector2( 582, 49 )
text = "Device Token"

[node name="LineEdit4" type="LineEdit" parent="VBoxContainer2"]
margin_left = 111.0
margin_top = 128.0
margin_right = 317.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( 507, 54 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="VBoxContainer2"]
margin_top = 161.0
margin_right = 107.0
margin_bottom = 175.0
rect_pivot_offset = Vector2( 582, 49 )
text = "Nombre"

[node name="LineEdit5" type="LineEdit" parent="VBoxContainer2"]
margin_left = 111.0
margin_top = 156.0
margin_right = 317.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 507, 54 )
size_flags_horizontal = 3
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ESTADO" type="Label" parent="."]
margin_left = 269.0
margin_top = 367.0
margin_right = 376.0
margin_bottom = 381.0
rect_pivot_offset = Vector2( 582, 49 )
text = "ESTADO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProvisionRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Load_Config" to="." method="_on_Load_Config_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="VBoxContainer2/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="request_completed" from="ProvisionRequest" to="." method="_on_ProvisionRequest_request_completed"]
